--- a/index.html
+++ b/index.html
@@ -166,12 +166,7 @@
             </form>
         </div>
     </section>
-    <script>
-        hamburger = document.querySelector(".hamburger");
-        hamburger.onclick = function() {
-            navBar = document.querySelector(".nav-home");
-            navBar.classList.toggle("active");
-        }
+    <script src="script.js" >
     </script>
   </body>
 </html>
