first-commit-to-this-branch

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <span class="one">Hello</span>
                 <span class="two">I'm</span>
             </div>
-            <h1>Demilade</h1>
-            <h3>Frontend <span>Designer</span></h3>
+            <h1>Demilade Orenisile</h1>
+            <h2>A Frontend <span>Designer</span></h2>
             <p>A passionate Frontend web developer with 3+ years of experience 
             </p>
         </div>
@@ -48,8 +48,10 @@
         </div>
         <div class="about-text">
             <h2>About<span>Me</span></h2>
-            <h3>lorem</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis aliquam veritatis libero, voluptas facere voluptatem sit excepturi dolor fugit repellat itaque earum consequatur labore est, dicta aperiam quisquam officia molestias.</p>
+            <!-- <h3>lorem</h3> -->
+            <p>Hello, I'm Demilade Orenisile, a passionate and detail-oriented web developer dedicated to creating exceptional digital experiences. With a strong foundation in front-end development, I bring creativity, technical expertise, and a collaborative mindset to every project.</p>
+            <p>My journey in web development began through self-learning during the pandemic. Since then, I've been on a continuous learning path, staying abreast of the latest industry trends and technologies. I thrive on challenges and view each project as an opportunity to expand my skill set.</p>
+            <p>Specializing in HTML, CSS, JavaScript, React.js, I am adept at translating design concepts into fully functional and responsive websites. I take pride in writing clean, efficient code that not only meets project requirements but also contributes to a positive user experience.</p>
         </div>
     </section>
 
@@ -64,22 +66,22 @@
                 <div class="s-icons">
                     <i class="fa-solid fa-mobile"></i>
                 </div>
-                <h3>web design</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse magnam dicta sapiente, fugit asperiores corporis consequatur, officia velit accusantium ullam cum quae </p>
+                <h3>Responsive Web Design</h3>
+                <p>I specialize in crafting visually stunning and fully responsive websites. Using HTML5, CSS3, and responsive design techniques, I ensure your website looks impeccable on various devices, providing an optimal user experience across desktops, tablets, and smartphones.</p>
             </div>
             <div class="box">
                 <div class="s-icons">
                     <i class="fa-solid fa-mobile"></i>
                 </div>
-                <h3>web design</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse magnam dicta sapiente, fugit asperiores corporis consequatur, officia velit accusantium ullam cum quae </p>
+                <h3>Interactive UI Development with React.js</h3>
+                <p> Leveraging the power of React.js, I create dynamic and interactive user interfaces that enhance user engagement. Whether it's building single-page applications (SPAs) or integrating components into existing projects, my expertise in React ensures seamless, efficient, and modular front-end development.</p> 
             </div>
             <div class="box">
                 <div class="s-icons">
                     <i class="fa-solid fa-mobile"></i>
                 </div>
-                <h3>web design</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse magnam dicta sapiente, fugit asperiores corporis consequatur, officia velit accusantium ullam cum quae </p>
+                <h3>Web Accessibility Integration</h3>
+                <p>Committed to inclusivity, I specialize in integrating web accessibility standards into front-end development. By ensuring that websites are navigable and usable for all users, including those with disabilities, I contribute to creating an inclusive digital environment that aligns with the principles of universal design.</p>
             </div>
     </section>
     <section class="portfolio" id="portfolio" >
@@ -91,33 +93,33 @@
             <div class="row">
                 <img src="./picture/five.jpg" alt="">
                 <div class="layer">
-                    <h5>visual design</h5>
-                    <p>check out my design </p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h5>Creating Form</h5>
+                    <p>check out my design on how i used html, css and web3forms</p>
+                    <a href="https://orenisiledemilade.github.io/Skillhat-webpage/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="row">
                 <img src="./picture/two.jpg" alt="">
                 <div class="layer">
-                    <h5>visual design</h5>
-                    <p>check out my design </p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h5>Password Generator</h5>
+                    <p>check out my design on how i implemented the use of html css and javaSciprt and created this beautiful password generator</p>
+                    <a href="https://orenisiledemilade.github.io/password-generator/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="row">
                 <img src="./picture/five.jpg" alt="">
                 <div class="layer">
-                    <h5>visual design</h5>
+                    <h5>Code Quiz</h5>
                     <p>check out my design </p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://orenisiledemilade.github.io/Code-Quiz/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="row">
                 <img src="./picture/four.jpg" alt="">
                 <div class="layer">
-                    <h5>visual design</h5>
-                    <p>check out my design </p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h5>Console-Finances</h5>
+                    <p>This was a project where i was tasked with implementting the javaScript code</p>
+                    <a href="https://orenisiledemilade.github.io/Console-Finances/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="row">
@@ -143,26 +145,30 @@
     <section class="contact"  id="contact">
         <div class="main-text">
             <h2><span>Contact</span>Me</h2>
-            <p>ehedncnuij   wkbj kbc iuCB   qehjcj n</p>
+            <!-- <p>ehedncnuij   wkbj kbc iuCB   qehjcj n</p> -->
         
         <div class="list">
-            <li><a href="#">204-xxx-xxxx</a></li>
+            <li><a href="#">204-960-6557</a></li>
             <li><a href="#">Dorenisile@gmail.com</a></li>
             <li><a href="#">Like Share and Suscribe</a></li>
         </div>
         <div class="contact-icons">
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/orenisile-demilade-83919323a/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://twitter.com/home?lang=en"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://github.com/OrenisileDemilade"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
         <div class="contact-form">
-            <form action="">
-                <input type="name" placeholder= "Your Name" required>
-                <input type="email" placeholder= "Your Email Address" required>
-                <input type="number" placeholder="Your Mobile Number">
-                <textarea name="" id="" cols="35" rows="10" placeholder="How can I Help You" ></textarea required >
-                <input type="submit" value="Send Message" class="submit" required>
+            <form action="https://api.web3forms.com/submit" method="POST">
+
+                <input type="hidden" name="apikey" value="aa0f5823-08e4-4ad0-bda6-968e4fc4581f">
+                <input type="text" name="name" placeholder="Firstname" required> <br>
+                <input type="text" name="name" placeholder="Lastname" required>    
+                <input type="number" name="number" placeholder="number" required>   
+                <input type="email" name="email" placeholder="Email Address" required> <br>
+                <textarea name="message" placeholder="write  a text to me" required></textarea>
+                <div class="h-captcha" data-captcha="true"></div>
+                <button type="submit" class="submit" >Submit Form</button>
             </form>
         </div>
     </section>
